apps/listmonk/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listmonk-ingress-qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #TODO: hide the ip like a secret
    external-dns.alpha.kubernetes.io/target: "90.129.244.3"
    external-dns.alpha.kubernetes.io/hostname: listmonk-qa.lab.aminrj.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - listmonk-qa.lab.aminrj.com
      secretName: listmonk-tls
  rules:
    - host: listmonk-qa.lab.aminrj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listmonk
                port:
                  number: 9000
